--- a/assets/package.json
+++ b/assets/package.json
@@ -4,7 +4,7 @@
   "description": "My personal projects",
   "license": "AGPL-3.0",
   "scripts": {
-    "start": "webpack --watch --colors --stdin --progress",
+    "start": "webpack --watch --colors --stdin",
     "deploy": "webpack -p"
   },
   "devDependencies": {
