Basic client side code for resumable upload

--- a/assets/bsconfig.json
+++ b/assets/bsconfig.json
@@ -5,7 +5,9 @@
   ],
   "bs-dependencies": [
     "@glennsl/bs-json",
-    "bucklescript-phx"
+    "bucklescript-phx",
+    "bs-webapi",
+    "bs-fetch"
   ],
   "package-specs": {
     "module": "commonjs",
