--- a/assets/package.json
+++ b/assets/package.json
@@ -24,9 +24,12 @@
   },
   "dependencies": {
     "@glennsl/bs-json": "^1.1.0",
-    "bootstrap": "3",
+    "bs-fetch": "^0.2.1",
+    "bs-webapi": "^0.8.0",
     "bucklescript-phx": "^0.1.3",
+    "font-awesome": "^4.7.0",
     "phoenix": "file:../deps/phoenix",
-    "phoenix_html": "file:../deps/phoenix_html"
+    "phoenix_html": "file:../deps/phoenix_html",
+    "purecss": "^1.0.0"
   }
 }
