--- a/assets/bsconfig.json
+++ b/assets/bsconfig.json
@@ -5,14 +5,14 @@
   ],
   "bs-dependencies": [
     "@glennsl/bs-json",
-    "bucklescript-phx",
-    "bs-webapi",
-    "bs-fetch"
+    "bs-fetch",
+    "reason-react"
   ],
   "package-specs": {
     "module": "commonjs",
     "in-source": false
   },
   "bsc-flags": ["-bs-super-errors"],
+  "reason": {"react-jsx" : 2},
   "refmt": 3
 }
