--- a/assets/package.json
+++ b/assets/package.json
@@ -11,6 +11,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
     "bs-loader": "^2.0.0",
     "bs-platform": "^2.1.0",
     "copy-webpack-plugin": "^4.3.1",
@@ -25,11 +26,10 @@
   "dependencies": {
     "@glennsl/bs-json": "^1.1.0",
     "bs-fetch": "^0.2.1",
-    "bs-webapi": "^0.8.0",
-    "bucklescript-phx": "^0.1.3",
     "font-awesome": "^4.7.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
-    "purecss": "^1.0.0"
+    "purecss": "^1.0.0",
+    "reason-react": "^0.3.2"
   }
 }
