--- a/assets/package.json
+++ b/assets/package.json
@@ -30,6 +30,8 @@
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "purecss": "^1.0.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
     "reason-react": "^0.3.2"
   }
 }
