--- a/assets/package.json
+++ b/assets/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@glennsl/bs-json": "^1.1.0",
+    "antd": "^3.2.1",
     "bs-fetch": "^0.2.1",
     "font-awesome": "^4.7.0",
     "phoenix": "file:../deps/phoenix",
